# chop-it

./: .dockerignore  .env.example  .gitignore  .npmrc  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/src/app/: main.py
apps/api/src/app/core/: http.py  settings.py
apps/api/src/app/db/: base.py
apps/api/src/app/modules/chop_it/: __init__.py
apps/api/src/app/modules/chop_it/api/: __init__.py  router.py  schemas.py
apps/api/src/app/modules/chop_it/application/: __init__.py  services.py
apps/api/src/app/modules/chop_it/domain/: __init__.py  models.py
apps/api/src/app/modules/chop_it/infrastructure/: __init__.py  models.py  repository.py
apps/api/src/app/modules/health/: router.py
apps/api/src/app/scripts/: __init__.py  seed_demo.py
apps/api/tests/modules/chop_it/: test_domain_calculations.py  test_repository.py  test_router_catalog.py
apps/web/: .eslintrc.json  jest.config.js  jest.setup.ts  next.config.js  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/chop-it/: page.test.tsx  page.tsx
apps/web/src/components/: action-icons.tsx  app-header.tsx  chop-it-icon.tsx  chop-it-section-header.tsx  edit-icon.tsx
apps/web/src/features/chop-it/: api.ts  types.ts
apps/web/src/lib/: api.ts
docs/: architecture.md  product-tour.md
infra/docker/: api.Dockerfile  web.Dockerfile
(+17 files in other folders)
